--- a/Module_2_Solution/Index_html.html
+++ b/Module_2_Solution/Index_html.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Module-2 Solution</title>
-    <link rel="stylesheet" href="css/Style_css.css">
+    <link rel="stylesheet" href="https://github.com/Smritica/Smritica.github.io/blob/main/Module_2_Solution/Style_css.css">
     </head>
     <body>
     <h1>Our Menu</h1>
